# goit-python-web-hw14

./: .env.example  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 6c5b06196373_init.py  fb513d7b2453_init.py
src/config/: config.py
src/database/: db.py
src/models/: models.py
src/repositories/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py  roles.py
src/services/templates/: email_reset_password.html  verify_email.html
tests/: _conftest.py  _test_e2e_auth copy.py  conftest.py  test_e2e_auth.py  test_unit_repositories_contacts.py
