[tool.poetry]
name = "goit-python-web-hw14"
version = "0.1.0"
description = ""
authors = ["NilKad <kadulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
uvicorn = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.5"
fastapi-limiter = "^0.1.6"
jinja2 = "^3.1.4"
cloudinary = "^1.40.0"
aioredis = "^2.0.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
aiosqlite = "^0.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts= "--doctest-modules"
testpaths = ["tests",]
pythonpath = "."